Wed Nov  7 23:36:58 UTC 2012  Trevor Fields  <fields_t@ociweb.com>

        * dds/InfoRepo/DCPS_IR_Participant.cpp:
        * dds/InfoRepo/DCPS_IR_Publication.cpp:
        * dds/InfoRepo/DCPS_IR_Publication.h:
        * dds/InfoRepo/DCPS_IR_Subscription.cpp:
        * dds/InfoRepo/DCPS_IR_Subscription.h:
        * dds/InfoRepo/DCPSInfo_i.cpp:
        * dds/InfoRepo/DCPSInfo_i.h:

          Implemented a separate dispatching thread to prevent nested upcalls
          from occurring during oneway calls from transport flush or connects.
          Removed the delete during remove association as it should not happen.

Wed Oct 31 19:59:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.cpp:

          Allow for a nil DCPSInfoRepo object reference, thanks to
          Massimo Pichini on the mailing list for suggesting this.

        * dds/DCPS/FilterEvaluator.cpp:

          Fixed compile error on builds that are !DDS_HAS_WCHAR.

Tue Oct 30 19:52:06 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/metaclass_generator.cpp:

          Fixed a warning in code generated for IDL unions.

Tue Oct 30 14:20:59 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/HTemplate.txt:

          Added _var_type, _ptr_type, and narrow()
          to the generated FooTypeSupportImpl class.

Mon Oct 29 20:04:21 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/FilterEvaluator.h:

          Re-worked the export macros to work on MinGW.

Mon Oct 29 19:00:31 UTC 2012  Huang-Ming Huang  <huangh@ociweb.com>

        * dds/DCPS/RecorderImpl.cpp:

          Fixed set_qos() where datareader qos wasn't properly set.

        * dds/DCPS/RawDataSample.cpp:
        * dds/DCPS/ReplayerImpl.h:

          Fixed issue with uninitialized data members.

Mon Oct 29 18:58:20 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/FilterEvaluator.h:
        * dds/DCPS/FilterEvaluator.cpp:
